--- a/WebMGSRama/view/style.css
+++ b/WebMGSRama/view/style.css
@@ -67,6 +67,11 @@ body{
     font-size: 15px;
 }
 
+.ProfilAside{
+    margin-bottom: 2.5px;
+    margin-top: 2.5px;
+}
+
 /**************************CORPS DE LA PAGE - ASIDE [FIN]**********************/
 
 /**************************CORPS DE LA PAGE - SECTION [DEBUT]******************/
