Modif sur le "aside" une fois loggé
blaaa bla bla

--- a/WebMGSRama/view/style.css
+++ b/WebMGSRama/view/style.css
@@ -72,6 +72,10 @@ body{
     margin-top: 2.5px;
 }
 
+#AsideMessage{
+    margin-top: 5px;
+}
+
 /**************************CORPS DE LA PAGE - ASIDE [FIN]**********************/
 
 /**************************CORPS DE LA PAGE - SECTION [DEBUT]******************/
