Ajout de l'entête pour la page style.css
Entête de base

--- a/WebMGSRama/view/style.css
+++ b/WebMGSRama/view/style.css
@@ -1,9 +1,11 @@
 /*
-* Auteurs : Boccard Nicolas, Chauche Benoit
-* Entreprise : CFPT Informatique
-* Date : Novembre 2015
-* Version : 1.0
-*/
+ * Page        : style.css
+ * Description : This page is included to the project pages to display 
+ *               the css's website.
+ * Authors     : Chauche Benoit & Boccard Nicolas
+ * Date        : 01.12.2015
+ * Version     : 0.3
+ */
 
 /**************************MISE EN FORME GENERALE [DEBUT]**********************/
 
