--- a/WebMGSRama/view/style.css
+++ b/WebMGSRama/view/style.css
@@ -121,6 +121,13 @@ a:hover
     float: right;
 }
 
+#SectionPage header{
+    background-color: #969696;
+    height: 20px;
+    padding: 20px;
+    font-size: 24px;
+}
+
 /**************************CORPS DE LA PAGE - SECTION [FIN]********************/
 
 /*******************************BAS DE LA PAGE [DEBUT]*************************/
