--- a/WebMGSRama/view/style.css
+++ b/WebMGSRama/view/style.css
@@ -164,6 +164,11 @@ a:hover
     margin-top: 10px;
 }
 
+#SectionPage #MessageErreur{
+    margin-left: 75px;
+    margin-top: 10px;
+}
+
 /**************************CORPS DE LA PAGE - SECTION [FIN]********************/
 
 /*******************************BAS DE LA PAGE [DEBUT]*************************/
