--- a/WebMGSRama/view/style.css
+++ b/WebMGSRama/view/style.css
@@ -121,6 +121,7 @@ a:hover
     border: 1px solid #A6A6A6;
     border-radius: 2px;
     float: right;
+    overflow-y: auto;
 }
 
 #SectionPage header{
